fix: refine pre and code styling for improved readability

--- a/src/app.css
+++ b/src/app.css
@@ -200,7 +200,7 @@ li {
 
   & pre {
     @apply rounded-lg border-2 border-neutral-500;
-    @apply px-0 py-0 pb-2;
+    @apply px-0 py-0;
     @apply grid;
     tab-size: 2;
   }
@@ -216,8 +216,7 @@ pre[data-code-title]:before {
   @apply bg-base-100;
   @apply text-sm/8;
   @apply font-bold;
-  @apply border-base-content/25 mb-1 block px-3;
-  @apply border-t border-r border-b border-l;
+  @apply border-base-content/25 block border border-b-0 px-3;
   @apply rounded-none rounded-tl-md rounded-tr-md;
 }
 
@@ -225,11 +224,18 @@ code[data-line-numbers] > span[data-line-number]::before {
   /* Insert the line number data attribute before the line */
   content: attr(data-line-number);
   /* Other styling */
-  @apply mx-4 inline-block w-4 text-right text-gray-500;
+  @apply border-neutral-content/20 border-r-1;
+  @apply text-neutral-content/50 mr-2 ml-2 inline-block w-4 pr-6 text-right sm:ml-4;
+}
+
+code[data-line-numbers] {
+  @apply py-2;
+  @apply border-base-content/25 border;
+  @apply rounded-none rounded-br-md rounded-bl-md;
 }
 
 code > span[data-highlighted] {
-  @apply bg-accent/30 m-0 w-full rounded-none p-0 pr-2;
+  @apply bg-accent/25 m-0 w-full rounded-none p-0 pr-2;
 }
 
 code > span {
